# rustomata

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  benchmark  benchmark-results.txt  benchmark.sh  example_cfg.gr  example_mcfg.gr  old-md.rs
corp_nfa/: pmcfg-100.readable  pmcfg-20.readable  pmcfg-50.readable
examples/: example.cfg  example.classes  example.pda  example.pmcfg  example.tsa  example2.cfg  example2.pmcfg  example3.cfg  example_cfg.gr  example_cfg2.gr  example_cfg3.gr  example_equivalence.classes  example_mcfg.gr  example_mcfg.txt
res/: -10-nfa-results.txt  pmcfg-10-10-results.txt  pmcfg-10-15-results.txt  pmcfg-10-20-results.txt  pmcfg-10-5-results.txt  pmcfg-5-10-results.txt  pmcfg-5-15-results.txt  pmcfg-5-20-results.txt  pmcfg-5-5-results.txt
res/pmcfg-5-05/: results.txt
res/pmcfg-5-05-2/: results.txt
res/pmcfg-5-10/: results.txt
res/pmcfg-5-10-2/: results.txt
res/pmcfg-5-15/: results.txt
res/pmcfg-5-15-2/: results.txt
res/pmcfg-5-20/: results.txt
res/pmcfg-5-20-2/: results.txt
search/: Cargo.toml
search/src/: lib.rs  search.rs
src/: lib.rs  main.rs
src/approximation/: cli.rs  equivalence_classes.rs  mod.rs  ptk.rs  ptk.rs.backup  relabel.rs  tts.rs
src/automata/: configuration.rs  from_str.rs  mod.rs  red.rs  transition.rs
src/cfg/: cli.rs  from_pmcfg.rs  from_str.rs  mod.rs
src/coarse_to_fine/: benchmark.rs  cli.rs  mod.rs
src/cs_representation/: bracket_fragment.rs  cla.rs  cli.rs  mod.rs
src/dyck/: mod.rs  multiple.rs
tests/: cfg.rs  mcfg.rs  pmcfg.rs
unique-heap/: Cargo.toml
vecmultimap/: Cargo.toml
(+179 files in other folders)
