[package]
name = "rustomata"
version = "0.1.0"
authors = ["Tobias Denkinger <tobias.denkinger@tu-dresden.de>"]
autobins = false

[lib]
name = "rustomata"
path = "src/lib.rs"

[[bin]]
name = "rustomata"
path = "src/bin/main.rs"

[dependencies]
clap = "2.19"
integeriser = { git = "https://github.com/tud-fop/rust-integeriser.git" }
log_domain = "0.4.0"
nom = "^3.2"
num-traits = "0.1.41"
rand = "0.3.16"
time = "0.1.38"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"
fnv = "1.0"
flate2 = "1.0"

[profile.release]
debug = true